--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,18 +1,32 @@
 version: 0.2
+
 phases:
+  install:
+    runtime-versions:
+      python: 3.11
+    commands:
+      - echo "Installing dependencies..."
+      - pip install --upgrade pip
+
   pre_build:
     commands:
-      - echo "Starting build process..."
+      - echo "Pre-build started..."
+      - echo "Pre-build complete."
+
   build:
     commands:
+      - echo "Build started..."
       - echo "Copying DAG files to S3..."
-      - aws s3 cp --recursive ./dags s3://airflow-managed-gds/dags/
+      - aws s3 cp --recursive ./dags s3://airflow-env-bkt/dags/
       - echo "Copying dim data files to S3..."
-      - aws s3 cp --recursive ./data_for_dims s3://food-delivery-data-analysis/dims/
-      - echo "Copying pyspark scripts to S3..."
-      - aws s3 cp --recursive ./scripts s3://food-delivery-data-analysis/pyspark_script/
+      - aws s3 cp --recursive ./data/dim s3://pf-food-del-data/dims/
+      - echo "Copying PySpark scripts to S3..."
+      - aws s3 cp --recursive ./scripts s3://pf-food-del-data/pyspark_scripts/
       - echo "Copying redshift jar file to S3..."
-      - aws s3 cp --recursive ./jars s3://food-delivery-data-analysis/redshift-connector-jar/
+      - aws s3 cp --recursive ./jars s3://pf-food-del-data/redshift-connector-jar/
+      - echo "Build complete."
+
   post_build:
     commands:
-      - echo "Build and deployment process complete!!!"
+      - echo "Post-build started..."
+      - echo "Post-build complete."
